--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fontsource/pretendard": "^5.2.5",
     "@hookform/resolvers": "^3.3.4",
     "@tanstack/react-query": "^5.79.2",
+    "@types/uuid": "^10.0.0",
     "antd": "^5.15.0",
     "axios": "^1.9.0",
     "dayjs": "^1.11.10",
@@ -22,6 +23,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.50.0",
     "styled-components": "^6.1.8",
+    "uuid": "^11.1.0",
     "yup": "^1.3.3"
   },
   "devDependencies": {
