--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,22 @@
 {
+  "plugins": ["@trivago/prettier-plugin-sort-imports"],
+  "importOrder": [
+    "^react$",
+    "^react-(.*)$",
+    "^@react-(.*)$",
+    "^@/(.*)$",
+    "^@components/(.*)$",
+    "^@hooks/(.*)$",
+    "^@utils/(.*)$",
+    "^@types/(.*)$",
+    "^@constants/(.*)$",
+    "^@styles/(.*)$",
+    "^[./]"
+  ],
+  "importOrderSeparation": true,
+  "importOrderSortSpecifiers": true,
+  "importOrderGroupNamespaceSpecifiers": true,
+  "importOrderCaseInsensitive": true,
   "semi": true,
   "tabWidth": 2,
   "printWidth": 100,
@@ -7,4 +25,4 @@
   "bracketSpacing": true,
   "arrowParens": "always",
   "endOfLine": "lf"
-} 
+}
