--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+    "@types/node": "^22.15.29",
     "@types/react": "18.2.55",
     "@types/react-dom": "18.2.19",
     "@types/styled-components": "^5.1.34",
